# neonGX

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/neonGX/Core/: ADT.hpp  Timer.hpp  neonGX.hpp
include/neonGX/Core/Display/: Container.hpp  DisplayObject.hpp
include/neonGX/Core/Graphics/: Color.hpp
include/neonGX/Core/Image/: ImageManager.hpp  PNGImage.hpp
include/neonGX/Core/Input/: Input.hpp
include/neonGX/Core/Math/: Helpers.hpp  Matrix.hpp  Primitives.hpp  Transformation.hpp
include/neonGX/Core/Networking/: Networking.hpp
include/neonGX/Core/Renderer/: Renderer.hpp
include/neonGX/Core/Renderer/OpenGL/: GLBuffer.hpp  GLContext.hpp  GLFrameBuffer.hpp  GLRenderTarget.hpp  GLRenderer.hpp  GLTexture.hpp  ObjectRenderer.hpp
include/neonGX/Core/Renderer/OpenGL/Managers/: ShaderManager.hpp  TextureManager.hpp
include/neonGX/Core/Renderer/OpenGL/Shaders/: FontTextureShader.hpp  GLShader.hpp  TextureShader.hpp
include/neonGX/Core/Sprites/: Sprite.hpp  SpriteRenderer.hpp
include/neonGX/Core/Text/: FontTextureManager.hpp  Text.hpp  TextRenderer.hpp
include/neonGX/Core/Textures/: BaseTexture.hpp  RenderTexture.hpp  Texture.hpp
public/: index.html  test_webgl.html
rpc/: build.sh
rpc/NeoNPong/: pong.pb.cc  pong.pb.h
rpc/def/: pong.proto
scripts/: build.sh  postbuild.sh
src/: Main.cpp
src/Core/: neonGX.cpp
src/Core/Display/: Container.cpp  DisplayObject.cpp
src/Core/Graphics/: Color.cpp
src/Core/Image/: PNGImage.cpp
src/Core/Input/: Input.cpp
src/Core/Math/: Transformation.cpp
src/Core/Networking/: Networking.cpp
src/Core/Renderer/: Renderer.cpp
src/Core/Renderer/WebGL/: GLContext.cpp  GLRenderer.cpp  GLTexture.cpp  ObjectRenderer.cpp
src/Core/Renderer/WebGL/Shaders/: FontTextureShader.cpp  GLShader.cpp  TextureShader.cpp
src/Core/Sprites/: Sprite.cpp  SpriteRenderer.cpp
src/Core/Text/: FontTextureManager.cpp  Text.cpp  TextRenderer.cpp
src/Core/Textures/: BaseTexture.cpp  Texture.cpp
